[benchmarks] clean-up code